--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="17" />
     
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -26,6 +27,10 @@
         </activity>
          <activity 
             android:name="com.fds.MoviesSearch"
+            android:label="@string/app_name" >
+        </activity>
+        <activity 
+            android:name="com.fds.Locator"
             android:label="@string/app_name" >
         </activity>
     </application>
